--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -69,19 +69,21 @@
         </div>
         <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         <h2 class="govuk-heading-l">Salary</h2>
-        <p class="govuk-body">Give details about the salary for this course.</p>
-        <p class="govuk-body">You should:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>give an indication of the salary – if you don’t have the figure, say how it will be calculated (eg using the unqualified teachers’ pay scales)</li>
-          <li>say whether there are any fees or others costs – if there are no fees for this course, you should also say so</li>
-        </ul>
+        <div id="salary-details-hint">
+          <p class="govuk-body">Give details about the salary for this course.</p>
+          <p class="govuk-body">You should:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>give an indication of the salary – if you don’t have the figure, say how it will be calculated (eg using the unqualified teachers’ pay scales)</li>
+            <li>say whether there are any fees or others costs – if there are no fees for this course, you should also say so</li>
+          </ul>
+        </div>
         <div class="govuk-character-count" data-module="character-count" data-maxwords="250">
           <div id="Salary-wrapper" class="govuk-form-group @(salary ? " govuk-form-group--error " : " ")">
             <label asp-for="SalaryDetails" class="govuk-label govuk-label--s">Salary</label>
             @if (salary) {
               <span asp-validation-for="SalaryDetails" class="govuk-error-message"></span>
             }
-            <textarea asp-for="SalaryDetails" class="govuk-textarea js-character-count" rows="15" data-module="character-count"></textarea>
+            <textarea asp-for="SalaryDetails" class="govuk-textarea js-character-count" rows="15" data-module="character-count" aria-describedby="salary-details-hint"></textarea>
           </div>
         </div>
         <div class="govuk-form">
