--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" href="~/application.css" asp-append-version="true" />
 
+    <!--[if lt IE 9]>
+      <script src="~/vendor/html5shiv.min.js" asp-append-version="true"></script>
+    <![endif]-->
+
     <link rel="shortcut icon" href="~/images/favicon.ico" type="image/x-icon" asp-append-version="true" />
     <link rel="mask-icon" href="~/images/gov.uk-mask-icon.svg" color="#0b0c0c" asp-append-version="true" />
     <link rel="apple-touch-icon" sizes="180x180" href="~/images/govuk-apple-touch-icon-180x180.png" asp-append-version="true" />
