--- a/src/ui/Views/Course/Shared/_RequirementsCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_RequirementsCourseOverview.cshtml
@@ -45,4 +45,5 @@
       @courseEnrichment?.OtherRequirements.DisplayText()
     </dd>
   </dl>
+  @await Html.PartialAsync("CopyCourseNotice")
 </div>
