--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -17,7 +17,7 @@
     <![endif]-->
 
     <link rel="shortcut icon" href="~/images/favicon.ico" type="image/x-icon" asp-append-version="true" />
-    <link rel="mask-icon" href="~/images/gov.uk-mask-icon.svg" color="#0b0c0c" asp-append-version="true" />
+    <link rel="mask-icon" href="~/images/govuk-mask-icon.svg" color="#0b0c0c" asp-append-version="true" />
     <link rel="apple-touch-icon" sizes="180x180" href="~/images/govuk-apple-touch-icon-180x180.png" asp-append-version="true" />
     <link rel="apple-touch-icon" sizes="167x167" href="~/images/govuk-apple-touch-icon-167x167.png" asp-append-version="true" />
     <link rel="apple-touch-icon" sizes="152x152" href="~/images/govuk-apple-touch-icon-152x152.png" asp-append-version="true" />
