--- a/src/ui/Views/Organisation/Contact.cshtml
+++ b/src/ui/Views/Organisation/Contact.cshtml
@@ -1,4 +1,4 @@
-@model OrganisationViewModel;
+@model OrganisationViewModelForContact;
 
 @{
   ViewBag.Title = Model.InstitutionName + " contact information";
@@ -31,11 +31,11 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form asp-controller="Organisation" asp-action="About" method="post" data-module="form">
+      <form asp-controller="Organisation" asp-action="Contact" method="post" data-module="form">
         <input type="hidden" asp-for="@Model.InstitutionCode"></input>
         @await Html.PartialAsync("Shared/ErrorSummary")
         <div id="EmailAddress-wrapper" class="govuk-form-group @(email_address ? "govuk-form-group--error" : " ")">
-          <label asp-for="TrainWithUs" class="govuk-label">Email address</label>
+          <label asp-for="EmailAddress" class="govuk-label">Email address</label>
           <span id="email-hint" class="govuk-hint">Give an email address that applicants can use to contact you</span>
           @if (email_address) {
             <span asp-validation-for="EmailAddress" class="govuk-error-message"></span>
