--- a/src/ui/Views/Organisation/Details.cshtml
+++ b/src/ui/Views/Organisation/Details.cshtml
@@ -33,12 +33,11 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="course-parts">
         <div class="course-parts__item">
-          <h3 class="course-parts__title">Contact details from UCAS</h3>
-          <dl class="govuk-list--description" role="contentinfo">
-            <dt class="govuk-list--description__label">Training provider code</dt>
-            <dd>@Model.InstitutionCode.ToUpper()</dd>
-            <dt class="govuk-list--description__label">Email</dt>
-            <dd class="@(string.IsNullOrWhiteSpace(Model.EmailAddress) ? "course-parts__fields__value--empty" : "")">
+          <h3 class="course-parts__title">Contact details</h3>
+          <a class="course-parts__action" href="@Url.Action("Contact", "Organisation", new {ucasCode = Model.InstitutionCode})">Edit<span class="govuk-visually-hidden"> your organisation's contact details</span></a>
+          <dl class="course-parts__fields" role="contentinfo">
+            <dt class="course-parts__fields__label">Email address</dt>
+            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(Model.EmailAddress) ? "course-parts__fields__value--empty" : "")">
               @if (!String.IsNullOrWhiteSpace(Model.EmailAddress))
               {
                 <a href="mailto:@Model.EmailAddress" title="Send email to course contact" aria-label="Send email to course contact" class="govuk-link">@Model.EmailAddress.DisplayText()</a>
@@ -48,12 +47,12 @@
                 @Model.EmailAddress.DisplayText()
               }
             </dd>
-            <dt class="govuk-list--description__label">Telephone</dt>
-            <dd class="@(string.IsNullOrWhiteSpace(Model.Telephone) ? "course-parts__fields__value--empty" : "")">
+            <dt class="course-parts__fields__label">Telephone number</dt>
+            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(Model.Telephone) ? "course-parts__fields__value--empty" : "")">
               @Model.Telephone.DisplayText()
             </dd>
-            <dt class="govuk-list--description__label">Website</dt>
-            <dd class="@(string.IsNullOrWhiteSpace(Model.Url) ? "course-parts__fields__value--empty" : "")">
+            <dt class="course-parts__fields__label">Website</dt>
+            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(Model.Url) ? "course-parts__fields__value--empty" : "")">
               @if (!String.IsNullOrWhiteSpace(Model.Url))
               {
                 <a href="@Model.Url" class="govuk-link">@Model.Url.DisplayText()</a>
@@ -63,8 +62,8 @@
                 @Model.Url.DisplayText()
               }
             </dd>
-            <dt class="govuk-list--description__label">Address</dt>
-            <dd>
+            <dt class="course-parts__fields__label">Contact address</dt>
+            <dd class="course-parts__fields__value">
               @if (!String.IsNullOrWhiteSpace(Model.Addr1))
               {
                 @Model.Addr1<br>
