--- a/src/ui/Views/Organisation/Shared/ErrorSummary.cshtml
+++ b/src/ui/Views/Organisation/Shared/ErrorSummary.cshtml
@@ -51,7 +51,7 @@
                 {
                     foreach (var error in state.Value.Errors)
                     {
-                        var action = Array.IndexOf(new string[] {"EmailAddress", "Telephone", "Url", "Addr1", "Addr2", "Addr3", "Addr4", "Postcode"}, state.Key) > -1 ? "Contact" : "About";
+                        var action = OrganisationViewModelForContact.IsContactProperty(state.Key) ? "Contact" : "About";
                         <li><a href="@Url.Action(action, "Organisation")#@state.Key-wrapper">@error.ErrorMessage</a></li>
                     }
                 }
