Remove stray semicolons

--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -1,4 +1,4 @@
-@model OrganisationViewModelForAbout;
+@model OrganisationViewModelForAbout
 
 @{
   ViewBag.Title = "Edit 'About your organisation'";
