--- a/src/ui/Views/Organisation/Contact.cshtml
+++ b/src/ui/Views/Organisation/Contact.cshtml
@@ -1,4 +1,4 @@
-@model OrganisationViewModelForContact;
+@model OrganisationViewModelForContact
 
 @{
   ViewBag.Title = Model.InstitutionName + " contact information";
