--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 
 @section footerSupportLinks {
   <h2 class="govuk-visually-hidden">Support links</h2>
-  <ul class="govuk-footer__inline-list">
+  <ul class="govuk-footer__inline-list govuk-!-margin-bottom-0">
     <li class="govuk-footer__inline-list-item">
       <a href="mailto:becomingateacher@digital.education.gov.uk?subject=Publish%20teacher%20training%20courses%20feedback" class="govuk-footer__link">Give feedback</a>
     </li>
