--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -74,7 +74,7 @@
             <td class="govuk-table__cell">
               <a href="@Url.Action("show", "course", new {instCode = Model.InstitutionId, accreditingProviderId = course.AccreditingProviderId, ucasCode = course.CourseCode})" class="govuk-link">@course.Name (@course.CourseCode)</a>
             </td>
-            <td class="govuk-table__cell">@course.GetCourseVariantType()</td>
+            <td class="govuk-table__cell">@course.TypeDescription</td>
             <td class="govuk-table__cell">@course.GetCourseStatus()</td>
             <td class="govuk-table__cell">
               @if(course.CanHaveEnrichment())
