--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -65,6 +65,7 @@
             <th class="govuk-table__header ucas-info-table__type-col" scope="col">Type</th>
             <th class="govuk-table__header ucas-info-table__status-col" scope="col">Status</th>
             <th class="govuk-table__header ucas-info-table__content-status-col" scope="col">Course content</th>
+            <th class="govuk-table__header ucas-info-table__has-vancancies-col" scope="col">Has Vacancies</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -93,6 +94,7 @@
                 }
               }
             </td>
+            <td class="govuk-table__cell">@course.GetHasVacancies()</td>
           </tr>
         }
         </tbody>
