--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -28,29 +28,15 @@
 
           @if(Model.Course.StatusAsEnum != CourseRunningStatus.Running)
           {
-            <div class="govuk-warning-text govuk-warning-text--inline">
-              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-              <strong class="govuk-warning-text__text">
-                @if(Model.Course.StatusAsEnum == CourseRunningStatus.New)
-                {
-                  <text>This course is new and not yet running.</text>
-                }
-                else
-                {
-                  <text>This course is not running.</text>
-                }
-              </strong>
-            </div>
-            <p class="govuk-body">
-              @if(Model.Course.StatusAsEnum == CourseRunningStatus.New)
-              {
-                <text>It won&#8217;t appear online until you have made changes in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>. Set one or more training locations to &ldquo;running&rdquo; and set their Publish value to &ldquo;yes&rdquo;. You must do this so that applicants can apply on UCAS.</text>
-              }
-              else
-              {
-                <text>It won&#8217;t appear online. To publish it you&#8217;ll need to make changes in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>. Set one or more training locations to &ldquo;running&rdquo; and set their Publish value to &ldquo;yes&rdquo;.</text>
-              }
-            </p>
+            @if(Model.Course.StatusAsEnum == CourseVariantStatus.NeedsAttention)
+            {
+              @await Html.PartialAsync("Shared/CourseStatus/_NeedsAttention.cshtml");
+
+            } else {
+              @await Html.PartialAsync("Shared/CourseStatus/_NewOrNotRunning.cshtml");
+            }
+          } else {
+            @await Html.PartialAsync("Shared/CourseStatus/_RunningButNeedsAttention.cshtml");
           }
 
           <p class="govuk-body">You can only change this information using <a href="https://update.ucas.co.uk/netupdate2/Welcome.htm">UCAS web-link</a>. Changes will usually appear here within one working day.</p>
